# neural-avalanche-utac

./: .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  RELEASE_GUIDE.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
data/: hengen2025_targets.yaml
docs/: api.md  index.md  science.md
neural_avalanche_utac/: __init__.py  avalanche.py  benchmark.py  branching.py  cli.py  constants.py  crep_neural.py  ei_balance.py  homeostasis.py  power_law.py  spike_train.py  system.py
notebooks/: 01_neural_utac_overview.ipynb  02_avalanche_detection.ipynb  03_crep_brain_criticality.ipynb  04_gamma_brain_universality.ipynb
tests/: conftest.py  test_avalanche.py  test_branching.py  test_diamond_interface.py  test_power_law.py
