[project]
name = "neural-avalanche-utac"
version = "0.1.0"
description = "Brain Criticality & Neuronal Avalanche Threshold — GenesisAeon Package 20"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Johann Römer", email = "j.roemer@mor-research.org" }]
requires-python = ">=3.10"
keywords = [
    "neuronal avalanches",
    "brain criticality",
    "UTAC",
    "CREP tensor",
    "self-organised criticality",
    "branching process",
    "GenesisAeon",
    "neuroscience",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "matplotlib>=3.8.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]

[project.scripts]
neural-utac = "neural_avalanche_utac.cli:app"

[project.urls]
Homepage = "https://github.com/GenesisAeon/neural-avalanche-utac"
Repository = "https://github.com/GenesisAeon/neural-avalanche-utac"
Zenodo = "https://doi.org/10.5281/zenodo.19645351"
Issues = "https://github.com/GenesisAeon/neural-avalanche-utac/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["neural_avalanche_utac"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "W", "UP", "C4", "SIM"]
ignore = ["B008", "UP017"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=neural_avalanche_utac --cov-report=term-missing -v"

[tool.coverage.run]
source = ["neural_avalanche_utac"]
omit = ["tests/*"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "neural_avalanche_utac.cli"
disallow_untyped_decorators = false
